@@ -14,6 +14,11 @@
 				<ol style="list-style: disc;">
 					<li>
 						<a href="#sirius7.4.11">Changes in Sirius  Desktop 7.4.11</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#SpecifiersVisibleChanges">Specifiers-Visible Changes</a>
+							</li>
+						</ol>
 					</li>
 					<li>
 						<a href="#sirius7.4.10">Changes in Sirius  Desktop 7.4.10</a>
@@ -25,7 +30,7 @@
 						<a href="#sirius7.4.8">Changes in Sirius  Desktop 7.4.8</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#SpecifiersVisibleChanges">Specifiers-Visible Changes</a>
+								<a href="#SpecifiersVisibleChanges2">Specifiers-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -36,7 +41,7 @@
 						<a href="#sirius7.4.6">Changes in Sirius  Desktop 7.4.6</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#SpecifiersVisibleChanges2">Specifiers-Visible Changes</a>
+								<a href="#SpecifiersVisibleChanges3">Specifiers-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#DeveloperVisibleChanges">Developer-Visible Changes</a>
@@ -260,20 +265,32 @@
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
 		<h2 id="sirius7.4.11">Changes in Sirius  Desktop 7.4.11</h2>
-		<p>Nothing.</p>
+		<h3 id="SpecifiersVisibleChanges">Specifiers-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-success">Added</span> 
+				<code>GateMapping</code> and 
+				<code>GateCreationTool</code> have been added in sequence metamodel 
+				<code>org.eclipse.sirius.diagram.sequence.model/model/sequence.ecore</code> to add the Gate concept in sequence diagrams. It is used to display a Gate on a CombinedFragment, an InteractionUse or InteractionContainer.
+			</li>
+			<li><span class="label label-success">Added</span> The boolean 
+				<code>BasicMessageMapping#oblique</code> has been added for 
+				<code>BasicMessageMapping</code> in sequence metamodel 
+				<code>org.eclipse.sirius.diagram.sequence.model/model/sequence.ecore</code> to enable the use of oblique messages in Sequence diagrams.
+			</li>
+		</ul>
 		<h2 id="sirius7.4.10">Changes in Sirius  Desktop 7.4.10</h2>
 		<p>Nothing.</p>
 		<h2 id="sirius7.4.9">Changes in Sirius  Desktop 7.4.9</h2>
 		<p>Nothing.</p>
 		<h2 id="sirius7.4.8">Changes in Sirius  Desktop 7.4.8</h2>
-		<h3 id="SpecifiersVisibleChanges">Specifiers-Visible Changes</h3>
+		<h3 id="SpecifiersVisibleChanges2">Specifiers-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> In tables, the header label expression configured for Feature columns are now correctly evaluated as actual expressions.</li>
 		</ul>
 		<h2 id="sirius7.4.7">Changes in Sirius  Desktop 7.4.7</h2>
 		<p>Nothing.</p>
 		<h2 id="sirius7.4.6">Changes in Sirius  Desktop 7.4.6</h2>
-		<h3 id="SpecifiersVisibleChanges2">Specifiers-Visible Changes</h3>
+		<h3 id="SpecifiersVisibleChanges3">Specifiers-Visible Changes</h3>
 		<ul>
 			<li>The &#8216;interaction container mapping&#8217; has been added to the sequence diagram metamodel. It is configured like a container mapping. Its edit part deactivate user interaction. Its goal is to have a background container that graphically wraps around all sequence diagram element.</li>
 		</ul>
